Optimalized run method and add better Linux support